--- a/package.json
+++ b/package.json
@@ -53,11 +53,23 @@
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
+            "@types/react": "^18.3.12",
+            "@types/react-dom": "^18.3.1",
+            "@typescript-eslint/eslint-plugin": "^8.15.0",
+            "@typescript-eslint/parser": "^8.15.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "eslint": "^9.15.0",
+            "eslint-plugin-react": "^7.37.2",
+            "eslint-plugin-react-hooks": "^5.0.0",
+            "eslint-plugin-react-refresh": "^0.4.14",
+            "typescript": "^5.6.3",
             "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "preview": "vite preview",
+            "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 100",
+            "type-check": "tsc --noEmit"
       }
 }
