--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
       "name": "Handicrafts E-commerce Frontend",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
             "@jsr/supabase__supabase-js": "^2.49.8",
             "@radix-ui/react-accordion": "^1.2.3",
